# mdtpy

./: .cursorignore  .dropboxignore  CLAUDE.md  ChatGPT - MDT Python API 설명.txt  Makefile  README.md  chapgpt_test.py  chatgpt_script.txt  data.json  main.py  mdt_summary.jq  model.json  pyproject.toml  requirements.txt  setup.py  test.py  test_run_op.py  test_serde.py  test_timeseries.py  utils.jslt
.claude/: settings.json
doc/: programming_guide.md
jinja_templates/: airflow_dag.pbl  bash_operator.j2  task.j2
jq_scripts/: examples.md  filter  filter_not  list_twins  mdt.jq  summarize  to_csv  to_id  xxx.json
mdtpy/: __init__.py
mdtpy/client/: http_instance_client.py  http_service_client.py  utils.py
mdtpy/model/: aas_model.py  mdt.py  reference.py
src/: test operations.py  test submodel_elements.py  test_reference.py
src/mdtpy/: __init__.py  aas_misc.py  descriptor.py  exceptions.py  fa3st.py  http_client.py  instance.py  operation.py  parameter.py  reference.py  submodel.py  timeseries.py  utils.py  value.py
src/mdtpy/airflow/: CLAUDE.md  README.md  __init__.py  argument_spec.py  dag_context.py  invocation.py
src/mdtpy/basyx/: serde.py
src/samples/: sample_add_and_sleep.py  sample_inspector_simiulation.py  sample_instance.py  sample_multi_ops.py  sample_operations.py  sample_parameters.py  sample_timeseries.py
tests/: conftest.py  test_aas_misc.py  test_descriptor.py  test_fa3st.py  test_http_client.py  test_instance.py  test_operation.py  test_parameter.py  test_submodel.py  test_timeseries.py  test_utils.py  test_value.py
