[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdtpy"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "basyx-python-sdk>=2.0.0,<3.0.0",
    "dataclass-wizard==0.22",
    "isodate>=0.7.2",
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "tika>=3.1.0",
    "typing_extensions>=4.2.0",
    "urllib3>=2.6.2,<3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# 참고: ROS2를 source한 쉘에서는 /opt/ros/.../launch_pytest 플러그인이
# 자동 로드되어 yaml 누락으로 충돌한다. `.env`의 PYTEST_DISABLE_PLUGIN_AUTOLOAD=1
# 을 uv가 픽업하도록 호출해야 하므로 다음 중 하나를 사용한다.
#   make test
#   uv run --env-file .env pytest
# 또는 셸에 `export UV_ENV_FILE=.env`를 등록하면 `uv run pytest`도 그대로 동작한다.
